# Video-query

./: .gitignore  AGENT.md  Makefile  Readme.md  mock.html
.github/: CONTRIBUTING.md  SECURITY.md
backend/: .env  .gitignore  app.py  config.py  main.py  models.py  prompt.txt  pyproject.toml  requirements.txt  setup_env.sh  test_backend.py
backend/data/db/: chroma.sqlite3
backend/routers/: video.py
backend/services/: ai_engine.py  ai_service.py  db_service.py  storage.py  video_processor.py  video_service.py
backend/services/prompts/: video_analysis.txt
backend/video_index/: pyvenv.cfg
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  api.js  index.css
frontend/src/components/features/: ProjectDetail.js  ProjectList.js
frontend/src/components/icons/: Icons.js
frontend/src/components/layout/: Header.js  LoadingScreen.js
