[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.1",
    "uvicorn>=0.40.0",
    "yt-dlp>=2025.12.8",
]
